# msc_project

./: .gitignore  README.md  README.md.txt
DataAnalysis_and_Plotting/: 3dQdensity.py  AutocorrTime.py  ChiSquaredFit-altSpacing.csv  ChiSquaredFit.csv  ChiSquaredFit2.csv  ChiSquaredFit_coarse.csv  DataAnalysis_and_Plotting.py  Determine-YMscale.py  E_v_flowtime.py  QHist.py  Q_v_flowtime.py  Q_v_mc_time.py  QdensityDistribution.py  R-non_Gauss-smallerErrors.py  R-non_Gauss.py  ShowStatisticalIndependence.py  chi1_4_atZeroFloTime-contExtrap.py  chi1_4_contExtrapol-NotPhysicalUnits.py  chi1_4_continuum_limit-DontUseMe.py  chi1_4_latticeconstant_linearExtrapolation.py  puwr.py  (+11 more)
LGF/: CMakeLists.txt  CMakeSettings.json  LGF.cpp  LGF.h  SimulationParameters.h  Vertex.cpp  Vertex.h  filesystem.h  mpiWrapper.cpp  mpiWrapper.h
LGF/Action/: Action.cpp  Action.h
LGF/Action/Gauge/: Wilson.cpp  Wilson.h
LGF/Field/: Double_field.cpp  Double_field.h  Field.h  RNG_field.cpp  RNG_field.h  SU3_field.cpp  SU3_field.h
LGF/Gradient_Flow/: FastGF.cpp  FastGF.h  GradientFlow.cpp  GradientFlow.h
LGF/HMC/: HMC.cpp  HMC.h  LHMC.cpp  LHMC.h
LGF/LMC/: LMC.cpp  LMC.h
LGF/Lattice/: Lattice.cpp  Lattice.h
LGF/Math/: C_double.cpp  C_double.h  Random.h  SU3_gen.cpp  SU3_gen.h  SU3_mat.cpp  SU3_mat.h
LGF/Observables/: EnergyDensity.cpp  EnergyDensity.h  ImprovedEnergyDensity.cpp  ImprovedEnergyDensity.h  ImprovedTopologicalCharge.cpp  ImprovedTopologicalCharge.h  QdensityDistribution.cpp  QdensityDistribution.h  TopologicalCharge.cpp  TopologicalCharge.h  UnImprovedTopologicalCharge.cpp  UnImprovedTopologicalCharge.h
LGF/SU3_Heatbath/: SU3_Heatbath.cpp  SU3_Heatbath.h
(+5 files in other folders)
